2010-05-05  #################### PortaBase 2.0b1 ####################

2010-05-05  JMB  Windows updates, packaging tweaks, translation tools

    Updated the Windows-specific parts of portabase.pro.  Fixed a bug in
    imageselector.cpp that broke compiling with MinGW.  Updated the application
    icon for Windows and the Inno Setup installer script.  Created a couple of
    batch scripts to automate compilation and creation of the installer.
    Updated the INSTALL file with current instructions for building on Windows.
    Made some minor packaging fixes for Debian and Maemo.

    There's now a trio of environment variables that can be used to test out
    PortaBase UI and help file translations: PORTABASE_QM, PORTABASE_QT_QM, and
    PORTABASE_HELP.  I'll document their usage fully on the web site with the
    notes on doing translations.  Clarified the encoding (UTF-8) of the
    existing help files and updated the UI translation files while I was at it.

2010-05-02  JMB  Help file update, more Maemo and usability improvements

    Updated the English help file to match the current state of the code.
    Added a note to the file properties dialog about how to access the column
    statistics dialog.  Fixed a bug in launching the column statistics dialog
    on Fremantle.  Fixed the appearance of the password and slideshow dialogs
    on Maemo.  Added a missing include for PBDialog that might cause compiling
    problems on some platforms.

2010-04-30  JMB  Proper D-Bus support, more bugfixes and Maemo improvements

    Added code to correctly register with D-Bus on Maemo; this allows PortaBase
    to be launched by clicking on a file in the file manager, ensures that only
    one copy of PortaBase is open, and prevents PortaBase from crashing shortly
    after being launched from the menu.
    
    Moved the "None" date button from the row editor to the date picker dialog,
    allowing long dates to fit comfortably even on smaller screens.  Fixed a