@@ -1,7 +1,7 @@
 /*
  * xmlimport.cpp
  *
- * (c) 2003,2009 by Jeremy Bowman <jmbowman@alum.mit.edu>
+ * (c) 2003,2009-2010 by Jeremy Bowman <jmbowman@alum.mit.edu>
  *
  * This program is free software; you can redistribute it and/or modify
  * it under the terms of the GNU General Public License as published by
@@ -991,7 +991,7 @@ bool XMLImport::validateFilterConditions()
         }
         delete filter;
     }
-    return false;
+    return true;
 }
 
 /**
